--- a/main.scss
+++ b/main.scss
@@ -22,12 +22,52 @@ p {
     font-family: "Roboto";
 }
 
-.footer__title {
-    font-weight: bold;
-    font-family: "Shrikhand";
-    color: white;
-}
+.menu {
+    background-color: #F2F2F2;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
+    .menu--title {
+        position: relative;
+        right: 4.2em;
+    }
+
+    .menu__cards {
+        height: 14em;
+        width: 90%;
+        background-color: white;
+        border-radius: 1em;
+        margin-bottom: 1em;
+    }
+
+    .menu__cards--link {
+        text-decoration: none;
+        text-transform: capitalize;
+        color: black;
+    }
+
+    .menu__cards--size {
+        height: 70%;
+        width: 100%;
+        object-fit: cover;
+        border-radius: 1em 1em 0em 0em;
+    }
+
+    .menu__cards--title {
+        font-style: "Roboto";
+        font-size: 1.1em;
+        margin-top: 0.2em;
+        margin-bottom: -0.5em;
+        margin-left: 0.5em;
+        
+    }
+    
+    .menu__cards--describe {
+        font-style: "Roboto";
+        margin-left: 0.5em;
+    }
+}
 
 footer {
     background-color: #353535;
