--- a/main.scss
+++ b/main.scss
@@ -14,8 +14,41 @@ body {
     min-width: 375px;
 }
 
-.title {
-    font-family: "Shrikhand" Arial, serif, sans-serif;
+.logo {
+    width: 5em;
+    position: relative;
+    left: 3em;
+}
+
+.introduction
+{
+    height: 16em;
+    text-align: center;
+    background-color: #F2F2F2;
+
+    &__location {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: gray;
+
+        & p {
+            margin-left: 1em;
+        }
+    }
+
+    &--title {
+        font-family: "Roboto";
+        margin-left: 2.5em;
+        width: 70%;
+    }
+
+    &--describe {
+        font-family: "Shrikhand";
+        font-size: 1.2em;
+        width: 80%;
+        margin-left: 2.2em;
+    }
 }
 
 p {
