--- a/main.css
+++ b/main.css
@@ -110,6 +110,33 @@ p {
   margin-left: 0.5em;
 }
 
+.step {
+  margin-left: 0.5em;
+}
+
+.step__number {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center;
+  margin-bottom: 1em;
+  -webkit-box-shadow: 2em;
+          box-shadow: 2em;
+  border: 1em;
+  border-radius: 1em;
+  background-color: grey;
+}
+
+.step__number--title {
+  margin-left: 1em;
+}
+
 footer {
   background-color: #353535;
   display: -webkit-box;
