--- a/main.scss
+++ b/main.scss
@@ -102,6 +102,28 @@ p {
     }
 }
 
+.step {
+
+    margin-left: 0.5em;
+
+    &__number {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;;
+    margin-bottom: 1em;
+    box-shadow: 2em;
+    border: 1em;
+    border-radius: 1em;
+    background-color: grey;
+
+        &--title {
+            margin-left: 1em;
+        }
+    }
+
+}
+
 footer {
     background-color: #353535;
     display: flex;
