--- a/main.scss
+++ b/main.scss
@@ -9,8 +9,9 @@ $primary: #9356DC;
 $secondary: #FF79DA;
 $tertiary: #99E2D0;
 $white: #FFFF;
-$background: #F2F2F2;
+$background: #F6F6F6;
 $footercolor: #353535;
+$headcolor: #EAEAEA;
 
 body {
     max-width: 1280px;
@@ -23,17 +24,19 @@ body {
     width: 11em;
 }
 
-.introduction
-{
-    height: 16em;
+.introduction {
     text-align: center;
     background-color: $background;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
     &__location {
         display: flex;
         align-items: center;
         justify-content: center;
-        background-color: gray;
+        width: 100%;
+        background-color:$headcolor;
 
         & p {
             margin-left: 1em;
@@ -42,7 +45,6 @@ body {
 
     &--title {
         font-family: "Roboto";
-        margin-left: 2.5em;
         width: 70%;
     }
 
@@ -50,7 +52,19 @@ body {
         font-family: "Shrikhand";
         font-size: 1.2em;
         width: 80%;
-        margin-left: 2.2em;
+    }
+
+    &__buton {
+        width: 15em;
+        border-radius: 2em;
+        margin-bottom: 1em;
+        background: linear-gradient($secondary, $primary);
+        color: $white;
+
+        & p {
+            font-family: "Roboto";
+        }
+        
     }
 }
 
@@ -64,49 +78,46 @@ p {
     flex-direction: column;
     align-items: center;
 
-    .menu--title {
+    &--title {
         position: relative;
         right: 4.2em;
     }
 
-    .menu__cards {
+    &__cards {
         height: 14em;
         width: 90%;
         background-color:$white;
         border-radius: 1em;
         margin-bottom: 1em;
-    }
 
-    .menu__cards--link {
-        text-decoration: none;
-        text-transform: capitalize;
-        color: black;
-    }
+        &--link {
+            text-decoration: none;
+            text-transform: capitalize;
 
-    .menu__cards--size {
-        height: 70%;
-        width: 100%;
-        object-fit: cover;
-        border-radius: 1em 1em 0em 0em;
-    }
+        &--size {
+            height: 70%;
+            width: 100%;
+            object-fit: cover;
+            border-radius: 1em 1em 0em 0em;
+        }
 
-    .menu__cards--title {
-        font-style: "Roboto";
-        font-size: 1.1em;
-        margin-top: 0.2em;
-        margin-bottom: -0.5em;
-        margin-left: 0.5em;
-        
-    }
-    
-    .menu__cards--describe {
-        font-style: "Roboto";
-        margin-left: 0.5em;
+        &--title {
+            font-style: "Roboto";
+            font-size: 1.1em;
+            margin-top: 0.2em;
+            margin-bottom: -0.5em;
+            margin-left: 0.5em;
+            
+        }
+
+        &--describe {
+            font-style: "Roboto";
+            margin-left: 0.5em;
+        }
     }
 }
 
 .step {
-
     margin-left: 0.5em;
 
     &__number {
@@ -118,7 +129,7 @@ p {
     box-shadow: 2em;
     border: 1em;
     border-radius: 1em;
-    background-color: grey;
+    background-color: $background;
     position: relative;
 
         &--title {
@@ -129,7 +140,7 @@ p {
     &--lozenge {
         position: absolute;
         left: -5px;
-        top: 1em;
+        top: 21px;
         text-align: center;
         height: 20px;
         line-height: 20px;
@@ -152,21 +163,22 @@ footer {
         font-family: "Shrikhand";
         font-style: italic;
         margin-left: 0.7em;
-        color: white;
+        color:$white;
     }
 
     .footer__links {
-        color: white;
+        color: $white;
         font-family: "Srikhand";
         font-size: 1em;
         text-decoration: none;
         margin-left: 1em;
         margin-bottom: 0.4em;
-      }
+    }
     
     .fa-hands-helping {
         font-size: 0.8em;
     }
+
     .footer--marge {
         margin-right: 1em;
     }
