--- a/css/main.css
+++ b/css/main.css
@@ -181,4 +181,8 @@ footer .fa-hands-helping {
 footer .footer--marge {
   margin-right: 1em;
 }
+
+.underline {
+  border-bottom: 100px solid red;
+}
 /*# sourceMappingURL=main.css.map */
