--- a/main.scss
+++ b/main.scss
@@ -8,11 +8,13 @@
 $primary: #9356DC;
 $secondary: #FF79DA;
 $tertiary: #99E2D0;
+$text-tertiary: #008766;
 $white: #FFFF;
 $background: #F6F6F6;
 $footercolor: #353535;
 $headcolor: #EAEAEA;
 $textcolor: black;
+
 
 body {
     max-width: 1280px;
@@ -67,7 +69,7 @@ header {
         border-radius: 2em;
         margin-bottom: 1em;
         background: linear-gradient($secondary, $primary);
-        color: $white;
+        color:$white;
 
         & p {
             font-family: "Roboto";
@@ -77,6 +79,10 @@ header {
 
 p {
     font-family: "Roboto";
+}
+
+.title {
+    margin-left: 0.5em;
 }
 
 .menu {
@@ -96,6 +102,7 @@ p {
         background-color:$white;
         border-radius: 1em;
         margin-bottom: 1em;
+        box-shadow: 2px 7px 7px $headcolor;
 
         &--link {
             text-decoration: none;
@@ -122,6 +129,26 @@ p {
             margin-left: 0.5em;
         }
     }
+
+    &--heart {
+        position: relative;
+        left: 14em;
+        bottom: 2.2em;
+    }
+
+    &--new {
+        position: relative;
+        left: 14.5em;
+        bottom: 13em;
+
+        border: solid 1px $tertiary;
+        border-radius: 2px;
+        color:$text-tertiary;
+        background-color: $tertiary;
+        font-weight: bold;
+        padding: 5px; 
+    }
+
 }
 
 .step {
