--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,3 @@
-@font-face {
-  font-family: "Roboto";
-  src: url("/fonts/Roboto-Black.ttf") format("ttf");
-  font-family: "Shrikhand";
-  src: url("/fonts/'Shrikhand-Regular.ttf") format("ttf");
-}
 body {
   max-width: 1280px;
   min-width: 375px;
@@ -19,12 +13,17 @@ header .logo {
   text-align: center;
 }
 
+p {
+  font-family: "Roboto";
+}
+
 .introduction {
   text-align: center;
   background-color: #F6F6F6;
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 1em;
 }
 .introduction__location {
   display: flex;
@@ -50,14 +49,14 @@ header .logo {
   border-radius: 2em;
   margin-bottom: 1em;
   background: linear-gradient(#FF79DA, #9356DC);
-  color: black;
+  color: #FFFF;
 }
 .introduction__buton p {
   font-family: "Roboto";
 }
 
-p {
-  font-family: "Roboto";
+.title {
+  margin-left: 0.5em;
 }
 
 .menu {
@@ -73,9 +72,10 @@ p {
 .menu__cards {
   height: 14em;
   width: 90%;
-  background-color: #FFFF;
+  background-color: #F6F6F6;
   border-radius: 1em;
   margin-bottom: 1em;
+  box-shadow: 2px 7px 7px #EAEAEA;
 }
 .menu__cards--link {
   text-decoration: none;
@@ -98,6 +98,22 @@ p {
 .menu__cards--describe {
   font-style: "Roboto";
   margin-left: 0.5em;
+}
+.menu--heart {
+  position: relative;
+  left: 14em;
+  bottom: 2.2em;
+}
+.menu--new {
+  position: relative;
+  left: 14.5em;
+  bottom: 13em;
+  border: solid 1px #99E2D0;
+  border-radius: 2px;
+  color: #008766;
+  background-color: #99E2D0;
+  font-weight: bold;
+  padding: 5px;
 }
 
 .step {
