--- a/main.css
+++ b/main.css
@@ -1,10 +1,3 @@
-@font-face {
-  font-family: "Roboto";
-  src: url("/fonts/Roboto-Black.ttf") format("ttf");
-  font-family: "Shrikhand";
-  src: url("/fonts/'Shrikhand-Regular.ttf") format("ttf");
-}
-
 body {
   max-width: 1280px;
   min-width: 375px;
@@ -21,6 +14,10 @@ header .logo {
   text-align: center;
 }
 
+p {
+  font-family: 'Roboto';
+}
+
 .introduction {
   text-align: center;
   background-color: #F6F6F6;
@@ -34,6 +31,7 @@ header .logo {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin-bottom: 1em;
 }
 
 .introduction__location {
@@ -55,14 +53,13 @@ header .logo {
 }
 
 .introduction--title {
-  font-family: "Roboto";
+  font-family: 'Roboto';
   width: 70%;
 }
 
 .introduction--describe {
-  font-family: "Shrikhand";
+  font-family: 'Roboto';
   font-size: 1.2em;
-  width: 80%;
 }
 
 .introduction__buton {
@@ -78,8 +75,53 @@ header .logo {
   font-family: "Roboto";
 }
 
-p {
-  font-family: "Roboto";
+.step {
+  margin-left: 0.5em;
+}
+
+.step__number {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-right: 1em;
+  margin-bottom: 1em;
+  -webkit-box-shadow: 2px 7px 7px #EAEAEA;
+          box-shadow: 2px 7px 7px #EAEAEA;
+  border: 1em;
+  border-radius: 0.7em;
+  background-color: #F6F6F6;
+  position: relative;
+}
+
+.step__number--title {
+  margin-left: 1em;
+  font-family: 'Roboto';
+  font-weight: bold;
+  font-size: 1.1em;
+}
+
+.step__number--color {
+  color: #7E7E7E;
+}
+
+.step--lozenge {
+  position: absolute;
+  left: -5px;
+  top: 21px;
+  text-align: center;
+  height: 20px;
+  line-height: 20px;
+  width: 15px;
+  color: #FFFF;
+  background-color: #9356DC;
+  border: solid 1px #9356DC;
+  border-radius: 50%;
 }
 
 .title {
@@ -108,7 +150,7 @@ p {
 .menu__cards {
   height: 14em;
   width: 90%;
-  background-color: #FFFF;
+  background-color: #F6F6F6;
   border-radius: 1em;
   margin-bottom: 1em;
   -webkit-box-shadow: 2px 7px 7px #EAEAEA;
@@ -158,48 +200,6 @@ p {
   background-color: #99E2D0;
   font-weight: bold;
   padding: 5px;
-}
-
-.step {
-  margin-left: 0.5em;
-}
-
-.step__number {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  text-align: center;
-  margin-bottom: 1em;
-  -webkit-box-shadow: 2em;
-          box-shadow: 2em;
-  border: 1em;
-  border-radius: 1em;
-  background-color: #F6F6F6;
-  position: relative;
-}
-
-.step__number--title {
-  margin-left: 1em;
-}
-
-.step--lozenge {
-  position: absolute;
-  left: -5px;
-  top: 21px;
-  text-align: center;
-  height: 20px;
-  line-height: 20px;
-  width: 15px;
-  color: #FFFF;
-  background-color: #9356DC;
-  border: solid 1px #9356DC;
-  border-radius: 50%;
 }
 
 footer {
