--- a/main.scss
+++ b/main.scss
@@ -1,10 +1,3 @@
-@font-face {
-    font-family: "Roboto";
-    src: url("/fonts/Roboto-Black.ttf") format("ttf");
-    font-family: "Shrikhand";
-    src: url("/fonts/'Shrikhand-Regular.ttf") format("ttf");
-}
-
 $primary: #9356DC;
 $secondary: #FF79DA;
 $tertiary: #99E2D0;
@@ -14,6 +7,7 @@ $background: #F6F6F6;
 $footercolor: #353535;
 $headcolor: #EAEAEA;
 $textcolor: black;
+$fontawesomecolor: #7E7E7E;
 
 
 body {
@@ -31,7 +25,10 @@ header {
         width: 11em;
         text-align: center;
     }   
-    
+}
+
+p {
+    font-family: 'Roboto';
 }
 
 .introduction {
@@ -40,6 +37,7 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 1em;
 
     &__location {
         display: flex;
@@ -54,14 +52,13 @@ header {
     }
 
     &--title {
-        font-family: "Roboto";
+        font-family: 'Roboto';
         width: 70%;
     }
 
     &--describe {
-        font-family: "Shrikhand";
+        font-family: 'Roboto';
         font-size: 1.2em;
-        width: 80%;
     }
 
     &__buton {
@@ -77,8 +74,46 @@ header {
     }
 }
 
-p {
-    font-family: "Roboto";
+.step {
+    margin-left: 0.5em;
+
+    &__number {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 1em;
+    margin-bottom: 1em;
+    box-shadow: 2px 7px 7px $headcolor;
+    border: 1em;
+    border-radius: 0.7em;
+    background-color: $background;
+    position: relative;
+
+    &--title {
+        margin-left: 1em;
+        font-family: 'Roboto';
+        font-weight: bold;
+        font-size: 1.1em;
+        }
+    
+    &--color {
+        color: $fontawesomecolor;
+    }
+    }
+
+    &--lozenge {
+        position: absolute;
+        left: -5px;
+        top: 21px;
+        text-align: center;
+        height: 20px;
+        line-height: 20px;
+        width: 15px;
+        color: $white;
+        background-color: $primary;
+        border: solid 1px $primary;
+        border-radius: 50%;
+    }
 }
 
 .title {
@@ -99,7 +134,7 @@ p {
     &__cards {
         height: 14em;
         width: 90%;
-        background-color:$white;
+        background-color: $background;
         border-radius: 1em;
         margin-bottom: 1em;
         box-shadow: 2px 7px 7px $headcolor;
@@ -150,42 +185,6 @@ p {
     }
 
 }
-
-.step {
-    margin-left: 0.5em;
-
-    &__number {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;;
-    margin-bottom: 1em;
-    box-shadow: 2em;
-    border: 1em;
-    border-radius: 1em;
-    background-color: $background;
-    position: relative;
-
-        &--title {
-            margin-left: 1em;
-        }
-    }
-
-    &--lozenge {
-        position: absolute;
-        left: -5px;
-        top: 21px;
-        text-align: center;
-        height: 20px;
-        line-height: 20px;
-        width: 15px;
-        color: $white;
-        background-color: $primary;
-        border: solid 1px $primary;
-        border-radius: 50%;
-    }
-}
-
 
 footer {
     background-color: $footercolor;
@@ -269,5 +268,3 @@ footer {
         }
     }
 }
-
-
