--- a/main.css
+++ b/main.css
@@ -76,7 +76,15 @@ p {
 }
 
 .step {
-  margin-left: 0.5em;
+  margin-left: 1.5em;
+  margin-bottom: 3em;
+  width: 90%;
+}
+
+.step--title {
+  margin-left: -0.5em;
+  font-family: "Roboto";
+  font-weight: 900;
 }
 
 .step__number {
@@ -124,10 +132,6 @@ p {
   border-radius: 50%;
 }
 
-.title {
-  margin-left: 0.5em;
-}
-
 .menu {
   background-color: #F6F6F6;
   display: -webkit-box;
@@ -140,9 +144,12 @@ p {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  padding-bottom: 2.5em;
 }
 
 .menu--title {
+  font-family: "Roboto";
+  font-weight: 700;
   position: relative;
   right: 4.2em;
 }
@@ -159,7 +166,6 @@ p {
 
 .menu__cards--link {
   text-decoration: none;
-  text-transform: capitalize;
   color: black;
 }
 
@@ -211,19 +217,18 @@ footer {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  padding-bottom: 2.5em;
 }
 
 footer .footer__title {
-  font-weight: bold;
   font-family: "Shrikhand";
-  font-style: italic;
   margin-left: 0.7em;
   color: #FFFF;
 }
 
 footer .footer__links {
   color: #FFFF;
-  font-family: "Srikhand";
+  font-family: "Roboto";
   font-size: 1em;
   text-decoration: none;
   margin-left: 1em;
