--- a/main.scss
+++ b/main.scss
@@ -17,14 +17,36 @@ body {
     padding: 0;
 }
 
+/* page principale */
+
 header {
-    
+
     text-align: center;
+    box-shadow: 5px 7px 7px $background;
+    height: 2.8em;
+    
+    .logo--main {
+        text-align: center;
+        font-family: "Shrikhand";
+    }
+}
+.start {
+    text-align: center;
+    box-shadow: 5px 7px 7px $background;
+    height: 2.8em;
+    display: flex;
+    align-items: center;    
 
     .logo {
-        width: 11em;
         text-align: center;
-    }   
+        font-family: "Shrikhand";
+        position: relative;
+        left: 2.3em;
+    }
+    
+    .start--link {
+        margin-left: 1em;
+    }
 }
 
 p {
@@ -38,6 +60,7 @@ p {
     flex-direction: column;
     align-items: center;
     margin-bottom: 1em;
+    padding-bottom: 2em;
 
     &__location {
         display: flex;
