--- a/main.css
+++ b/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 body {
   max-width: 1280px;
   min-width: 375px;
@@ -5,7 +6,7 @@ body {
   padding: 0;
 }
 
-/* page principale */
+/* en-tête index.html */
 header {
   text-align: center;
   -webkit-box-shadow: 5px 7px 7px #F6F6F6;
@@ -18,6 +19,8 @@ header .logo--main {
   font-family: "Shrikhand";
 }
 
+/*fin */
+/* en-tête pages de menu */
 .start {
   text-align: center;
   -webkit-box-shadow: 5px 7px 7px #F6F6F6;
@@ -42,6 +45,7 @@ header .logo--main {
   margin-left: 1em;
 }
 
+/* en-tête pages de menu */
 p {
   font-family: 'Roboto';
 }
@@ -105,9 +109,8 @@ p {
 }
 
 .step {
-  margin-left: 1.5em;
+  margin-left: 2.5em;
   margin-bottom: 3em;
-  width: 90%;
 }
 
 .step--title {
@@ -117,6 +120,7 @@ p {
 }
 
 .step__number {
+  width: 18em;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -147,12 +151,20 @@ p {
   color: #7E7E7E;
 }
 
+.step__number--marged {
+  margin-left: -1em;
+}
+
+.step__number--marged2 {
+  margin-left: -0.5em;
+}
+
 .step--lozenge {
   position: absolute;
   left: -5px;
-  top: 21px;
+  top: 16px;
   text-align: center;
-  height: 20px;
+  height: 19px;
   line-height: 20px;
   width: 15px;
   color: #FFFF;
@@ -274,28 +286,46 @@ footer .footer--marge {
 
 /* Palette du gout */
 .bigcards__picture {
-  height: 13em;
   width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
 }
 
 .composition {
+  height: 62em;
   background-color: #F6F6F6;
-  padding-top: 2em;
-  border-radius: 3em;
+  padding-top: 1em;
+  border-radius: 3em 3em 0 0;
   position: relative;
   top: -2.9em;
 }
 
 .composition--title {
   font-family: "Shrikhand";
-  font-style: italic;
   text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .palette__entry {
   margin-left: 1em;
+}
+
+.palette__entry .palette--title {
+  font-family: "Roboto";
+  font-size: 1em;
+  text-transform: uppercase;
+  color: grey;
+}
+
+.palette__entry .palette--title .underline {
+  border-bottom: solid 2px #99E2D0;
 }
 
 .palette__entry .palette__cards {
@@ -310,7 +340,7 @@ footer .footer--marge {
 }
 
 .palette__entry .palette__cards .dish__name {
-  font-family: "Shrikhand";
+  font-family: "Roboto";
   font-size: 1.2em;
   margin-top: 1em;
   margin-bottom: -0.5em;
@@ -326,5 +356,31 @@ footer .footer--marge {
           justify-content: space-between;
   margin-left: 0.5em;
   margin-bottom: -0.5em;
+}
+
+.palette__entry .palette__cards .descriptive--price {
+  margin-right: 1.1em;
+  font-weight: bolder;
+}
+
+.order__buton {
+  width: 12em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border-radius: 2em;
+  margin-top: 2.5em;
+  margin-left: 4em;
+  margin-bottom: 1em;
+  background: -webkit-gradient(linear, left top, left bottom, from(#FF79DA), to(#9356DC));
+  background: linear-gradient(#FF79DA, #9356DC);
+  color: #FFFF;
+  font-size: 1.1em;
 }
 /*# sourceMappingURL=main.css.map */
