--- a/main.scss
+++ b/main.scss
@@ -17,19 +17,21 @@ body {
     padding: 0;
 }
 
-/* page principale */
-
+/* en-tête index.html */
 header {
 
     text-align: center;
     box-shadow: 5px 7px 7px $background;
     height: 2.8em;
-    
+
     .logo--main {
         text-align: center;
         font-family: "Shrikhand";
     }
 }
+/*fin */
+
+/* en-tête pages de menu */
 .start {
     text-align: center;
     box-shadow: 5px 7px 7px $background;
@@ -48,6 +50,8 @@ header {
         margin-left: 1em;
     }
 }
+
+/* en-tête pages de menu */
 
 p {
     font-family: 'Roboto';
@@ -98,9 +102,8 @@ p {
 }
 
 .step {
-    margin-left: 1.5em;
+    margin-left: 2.5em;
     margin-bottom: 3em;
-    width: 90%;
     
     &--title {
         margin-left: -0.5em;
@@ -109,6 +112,7 @@ p {
     }
 
     &__number {
+    width: 18em;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -130,14 +134,23 @@ p {
     &--color {
         color: $fontawesomecolor;
     }
+
+    
+    &--marged {
+        margin-left: -1em;
+    }
+
+    &--marged2 {
+        margin-left: -0.5em;
+    }
     }
 
     &--lozenge {
         position: absolute;
         left: -5px;
-        top: 21px;
+        top: 16px;
         text-align: center;
-        height: 20px;
+        height: 19px;
         line-height: 20px;
         width: 15px;
         color: $white;
@@ -248,27 +261,41 @@ footer {
 /* Palette du gout */ 
 
 .bigcards__picture {
-    height: 13em;
     width: 100%;
     object-fit: cover;
 }
 
 .composition {
+    height: 62em;
     background-color: $background;
-    padding-top: 2em;
-    border-radius: 3em;
+    padding-top: 1em;
+    border-radius: 3em 3em 0 0;
     position: relative;
     top: -2.9em;
 
     &--title {
         font-family: "Shrikhand";
-        font-style: italic;
         text-align: center;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
     }
 }
 
 .palette__entry {
     margin-left: 1em;
+    
+    .palette--title{
+        font-family: "Roboto";
+        font-size: 1em;
+        text-transform: uppercase;
+        color: grey;
+
+
+        .underline {
+            border-bottom: solid 2px $tertiary;
+        }
+    }
 
     .palette__cards {
         width: 95%;
@@ -281,7 +308,8 @@ footer {
         }
     
         .dish__name {
-            font-family: "Shrikhand";
+            font-family: "Roboto";
+            
             font-size: 1.2em;
             margin-top: 1em;
             margin-bottom: -0.5em;
@@ -293,6 +321,25 @@ footer {
             justify-content: space-between;
             margin-left: 0.5em;
             margin-bottom: -0.5em;
+
+            &--price {
+                margin-right: 1.1em;
+                font-weight: bolder;
+            }
         }
     }
+}
+
+.order__buton {
+    width: 12em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 2em;
+    margin-top: 2.5em;
+    margin-left: 4em;
+    margin-bottom: 1em;
+    background: linear-gradient($secondary, $primary);
+    color:$white;
+    font-size: 1.1em;
 }
