--- a/main.css
+++ b/main.css
@@ -9,9 +9,7 @@ body {
 /* en-tête index.html */
 header {
   text-align: center;
-  -webkit-box-shadow: 5px 7px 7px #F6F6F6;
-          box-shadow: 5px 7px 7px #F6F6F6;
-  height: 2.8em;
+  height: 3em;
 }
 
 header .logo--main {
@@ -43,6 +41,7 @@ header .logo--main {
 
 .start .start--link {
   margin-left: 1em;
+  color: black;
 }
 
 /* en-tête pages de menu */
@@ -143,7 +142,7 @@ p {
 .step__number--title {
   margin-left: 1em;
   font-family: 'Roboto';
-  font-weight: bold;
+  font-weight: 700;
   font-size: 1.1em;
 }
 
@@ -219,7 +218,8 @@ p {
 }
 
 .menu__cards--title {
-  font-style: "Roboto";
+  font-family: 'Roboto';
+  font-weight: 700;
   font-size: 1.1em;
   margin-top: 0.2em;
   margin-bottom: -0.5em;
@@ -292,12 +292,12 @@ footer .footer--marge {
 }
 
 .composition {
-  height: 62em;
   background-color: #F6F6F6;
   padding-top: 1em;
   border-radius: 3em 3em 0 0;
   position: relative;
   top: -2.9em;
+  padding-bottom: 3em;
 }
 
 .composition--title {
@@ -313,8 +313,13 @@ footer .footer--marge {
           align-items: center;
 }
 
+.composition--fat {
+  font-family: 'Roboto';
+  font-weight: 100;
+}
+
 .palette__entry {
-  margin-left: 1em;
+  margin: 0.5em;
 }
 
 .palette__entry .palette--title {
@@ -329,9 +334,9 @@ footer .footer--marge {
 }
 
 .palette__entry .palette__cards {
-  width: 95%;
   background-color: #FFFF;
   border-radius: 0.8em;
+  margin-bottom: 1.8em;
 }
 
 .palette__entry .palette__cards .palette--link {
@@ -341,6 +346,7 @@ footer .footer--marge {
 
 .palette__entry .palette__cards .dish__name {
   font-family: "Roboto";
+  font-weight: 500;
   font-size: 1.2em;
   margin-top: 1em;
   margin-bottom: -0.5em;
@@ -358,9 +364,14 @@ footer .footer--marge {
   margin-bottom: -0.5em;
 }
 
+.palette__entry .palette__cards .descriptive--details {
+  font-weight: 300;
+  color: #7E7E7E;
+}
+
 .palette__entry .palette__cards .descriptive--price {
   margin-right: 1.1em;
-  font-weight: bolder;
+  font-weight: 700;
 }
 
 .order__buton {
