--- a/main.scss
+++ b/main.scss
@@ -19,10 +19,8 @@ body {
 
 /* en-tête index.html */
 header {
-
     text-align: center;
-    box-shadow: 5px 7px 7px $background;
-    height: 2.8em;
+    height: 3em;
 
     .logo--main {
         text-align: center;
@@ -48,6 +46,7 @@ header {
     
     .start--link {
         margin-left: 1em;
+        color: $textcolor;
     }
 }
 
@@ -127,7 +126,7 @@ p {
     &--title {
         margin-left: 1em;
         font-family: 'Roboto';
-        font-weight: bold;
+        font-weight: 700;
         font-size: 1.1em;
         }
     
@@ -194,7 +193,8 @@ p {
         }
 
         &--title {
-            font-style: "Roboto";
+            font-family: 'Roboto';
+            font-weight: 700;
             font-size: 1.1em;
             margin-top: 0.2em;
             margin-bottom: -0.5em;
@@ -266,12 +266,12 @@ footer {
 }
 
 .composition {
-    height: 62em;
     background-color: $background;
     padding-top: 1em;
     border-radius: 3em 3em 0 0;
     position: relative;
     top: -2.9em;
+    padding-bottom: 3em;
 
     &--title {
         font-family: "Shrikhand";
@@ -280,10 +280,16 @@ footer {
         justify-content: space-around;
         align-items: center;
     }
+
+    &--fat {
+        font-family: 'Roboto';
+        font-weight: 100;
+    }
 }
 
 .palette__entry {
-    margin-left: 1em;
+
+    margin: 0.5em;
     
     .palette--title{
         font-family: "Roboto";
@@ -298,9 +304,9 @@ footer {
     }
 
     .palette__cards {
-        width: 95%;
         background-color: $white;
         border-radius: 0.8em;
+        margin-bottom: 1.8em;
     
         .palette--link {
             text-decoration: none;
@@ -309,7 +315,7 @@ footer {
     
         .dish__name {
             font-family: "Roboto";
-            
+            font-weight: 500;
             font-size: 1.2em;
             margin-top: 1em;
             margin-bottom: -0.5em;
@@ -322,9 +328,14 @@ footer {
             margin-left: 0.5em;
             margin-bottom: -0.5em;
 
+            &--details {
+                font-weight: 300;
+                color: $fontawesomecolor;
+            }
+
             &--price {
                 margin-right: 1.1em;
-                font-weight: bolder;
+                font-weight: 700;
             }
         }
     }
