--- a/main.scss
+++ b/main.scss
@@ -337,8 +337,14 @@ footer {
 }
 
 /* La note enchantee */ 
-
 .bigcards__picture--enchantee {
+    height: 15em;
+    width: 100%;
+    object-fit: cover;
+}
+
+/* A la francaise" */ 
+.bigcards__picture--francaise {
     height: 15em;
     width: 100%;
     object-fit: cover;
