--- a/main.scss
+++ b/main.scss
@@ -207,10 +207,30 @@ p {
         }
     }
 
-    &--heart {
+    .menu--heart {
         position: relative;
         left: 14em;
         bottom: 2.2em;
+        z-index: 1;
+        
+        &:hover {
+            &::after {
+                opacity: 1;
+            }
+        }
+
+        &::after {
+            content: "";
+            position: relative;
+            left: 14em;
+            bottom: 2.2em;
+            z-index: -1;
+            opacity: 0;
+            transition: opacity 250ms;
+            background-color: $primary;
+        }
+        
+        
     }
 
     &--new {
