--- a/main.css
+++ b/main.css
@@ -231,27 +231,33 @@ p {
   margin-left: 0.5em;
 }
 
-.menu .menu--heart {
+.menu__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   position: relative;
-  left: 14em;
-  bottom: 2.2em;
+  left: 18.5em;
+  bottom: 3em;
+}
+
+.menu .menu--heart {
+  position: absolute;
   z-index: 1;
 }
 
-.menu .menu--heart:hover::after {
-  opacity: 1;
+.menu .menu--heartfill {
+  position: absolute;
+  z-index: 1;
+  opacity: 0;
+  color: #FFFF;
+  -webkit-transition: all 2s;
+  transition: all 2s;
 }
 
-.menu .menu--heart::after {
-  content: "";
-  position: relative;
-  left: 14em;
-  bottom: 2.2em;
-  z-index: -1;
-  opacity: 0;
-  -webkit-transition: opacity 250ms;
-  transition: opacity 250ms;
-  background-color: #9356DC;
+.menu .menu--heartfill:hover {
+  opacity: 1;
+  color: #9356DC;
+  color: linear-gradient(#FF79DA, #9356DC);
 }
 
 .menu--new {
