--- a/main.scss
+++ b/main.scss
@@ -89,14 +89,16 @@ p {
 
     &__buton {
         width: 15em;
+        height: 3em;
+        border:none;
         border-radius: 2em;
         margin-bottom: 1em;
         background: linear-gradient($secondary, $primary);
         color:$white;
-
-        & p {
-            font-family: "Roboto";
-        }   
+        text-decoration: none;
+        font-family: "Roboto";
+        font-size: 1em;
+        font-weight: 400;
     }
 }
 
@@ -375,15 +377,20 @@ footer {
 }
 
 .order__buton {
-    width: 12em;
+    width: 11.5em;
+    height: 3em;
     display: flex;
     align-items: center;
     justify-content: center;
+    border: none;
     border-radius: 2em;
     margin-top: 2.5em;
     margin-left: 4em;
     margin-bottom: 1em;
     background: linear-gradient($secondary, $primary);
     color:$white;
-    font-size: 1.1em;
+    font-size: 1em;
+    text-decoration: none;
+    font-family: "Roboto";
+    font-weight: 400;
 }
