--- a/main.css
+++ b/main.css
@@ -413,15 +413,31 @@ footer .footer--marge {
 .order__buton {
   width: 11.5em;
   height: 3em;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  border: none;
+  border-radius: 2em;
+  margin-top: 2.5em;
+  margin-left: 4em;
+  margin-bottom: 1em;
+  padding-left: 3em;
+  background: -webkit-gradient(linear, left top, left bottom, from(#FF79DA), to(#9356DC));
+  background: linear-gradient(#FF79DA, #9356DC);
+  color: #FFFF;
+  font-size: 1em;
+  text-decoration: none;
+  font-family: "Roboto";
+  font-weight: 400;
+  z-index: 1;
+}
+
+.order__buton:hover::after {
+  opacity: 1;
+  background-color: #ffdff6;
+}
+
+.order__buton::after {
+  content: "";
+  width: 11.5em;
+  height: 3em;
   border: none;
   border-radius: 2em;
   margin-top: 2.5em;
@@ -434,5 +450,9 @@ footer .footer--marge {
   text-decoration: none;
   font-family: "Roboto";
   font-weight: 400;
+  z-index: -1;
+  opacity: 0;
+  -webkit-transition: all 250ms;
+  transition: all 250ms;
 }
 /*# sourceMappingURL=main.css.map */
