--- a/main.scss
+++ b/main.scss
@@ -379,9 +379,31 @@ footer {
 .order__buton {
     width: 11.5em;
     height: 3em;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    border: none;
+    border-radius: 2em;
+    margin-top: 2.5em;
+    margin-left: 4em;
+    margin-bottom: 1em;
+    padding-left: 3em;
+    background: linear-gradient($secondary, $primary);
+    color:$white;
+    font-size: 1em;
+    text-decoration: none;
+    font-family: "Roboto";
+    font-weight: 400;
+    z-index: 1;
+
+    &:hover {
+        &::after {
+            opacity: 1;
+            background-color: lighten($secondary, 20);
+        }
+    }
+
+    &::after {
+    content: "";
+    width: 11.5em;
+    height: 3em;
     border: none;
     border-radius: 2em;
     margin-top: 2.5em;
@@ -393,4 +415,8 @@ footer {
     text-decoration: none;
     font-family: "Roboto";
     font-weight: 400;
+    z-index: -1;
+    opacity: 0;
+    transition: all 250ms;
+    }
 }
