--- a/main.scss
+++ b/main.scss
@@ -386,9 +386,17 @@ footer {
     margin-bottom: 1em;
     padding-left: 1em;
     background: linear-gradient($secondary, $primary);
+    
     color:$white;
     font-size: 1em;
     text-decoration: none;
     font-family: "Roboto";
     font-weight: 400;
+    box-shadow: 2px 4px 5px $footercolor;
+    transition: all 250ms;
+
+    &:hover {
+        background-color: lighten($secondary, 10);
+        box-shadow: 2px 4px 15px $footercolor;
+    }
 }
