--- a/main.scss
+++ b/main.scss
@@ -151,9 +151,9 @@ p {
         left: -5px;
         top: 16px;
         text-align: center;
-        height: 19px;
+        height: 20px;
+        width: 20px;
         line-height: 20px;
-        width: 15px;
         color: $white;
         background-color: $primary;
         border: solid 1px $primary;
@@ -208,42 +208,11 @@ p {
             margin-left: 0.5em;
         }
     }
-    
-    
-    &__container
-    {
-        display: flex;
-        position: relative;
-        left: 18.5em;
-        bottom: 3em;
-    }
-    .menu--heart {
-        position: absolute;
-        z-index: 1;        
-    }
-
-    
-    .menu--heartfill {
-
-        position: absolute;
-        z-index: 1;
-        opacity: 0;
-        color: $white;
-        transition: all 2s;
-
-        &:hover {
-            opacity: 1;
-            color: $primary;
-            color: linear-gradient($secondary, $primary)
-        } 
-          
-    }
 
     &--new {
         position: relative;
         left: 14.5em;
         bottom: 13em;
-
         border: solid 1px $tertiary;
         border-radius: 2px;
         color:$text-tertiary;
@@ -252,6 +221,74 @@ p {
         padding: 5px; 
     }
 
+    &__heart--black {
+        position: relative;
+        left: 15em;
+        bottom: 3.3em;
+        width: 0.75em;
+        height: 0.75em;
+        background-color: black;
+        transform : rotate(45deg);
+        z-index: 0;
+    
+    
+        &::before {
+            content: "";
+            position: absolute;
+            bottom: 0px;
+            left: -6px;
+            width: 0.75em;
+            height: 0.75em;
+            border-radius: 50%;
+            background-color:black;
+    
+        }
+    
+        &::after {
+            content: "";
+            position: absolute;
+            top: -6px;
+            right: 0px;
+            width: 0.75em;
+            height: 0.75em;
+            background-color:black;
+            border-radius: 50%;
+        }
+    }
+    
+    &__heart--white {
+        position: relative;
+        left: 241.75px;
+        bottom: 63.65px;
+        width: 0.54em;
+        height: 0.54em;
+        background-color: white;
+        transform : rotate(45deg);
+    
+    
+        &::before {
+            content: "";
+            position: absolute;
+            bottom: 0px;
+            left: -5.6px;
+            width: 0.54em;
+            height: 0.54em;
+            border-radius: 50%;
+            background-color: white;
+    
+        }
+    
+        &::after {
+            content: "";
+            position: absolute;
+            top: -5.6px;
+            right: 0px;
+            width: 0.54em;
+            height: 0.54em;
+            background-color:white;
+            border-radius: 50%;
+        }
+    }
 }
 
 footer {
@@ -385,6 +422,7 @@ footer {
     margin-left: 4em;
     margin-bottom: 1em;
     padding-left: 1em;
+    opacity: 1;
     background: linear-gradient($secondary, $primary);
     
     color:$white;
@@ -396,7 +434,7 @@ footer {
     transition: all 250ms;
 
     &:hover {
-        background-color: lighten($secondary, 10);
-        box-shadow: 2px 4px 15px $footercolor;
+        opacity: 0.8;
+        box-shadow: 2px 4px 15px black;
     }
 }
